Update the site URL in the layout and simplify sitemap entries in robots.txt.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { dir } = languages[lang];
 const title = t("meta.title");
 const description = t("meta.description");
 
-const siteUrl = "https://vitalspath.com";
+const siteUrl = "https://lbernardo-dev.github.io";
 
 const jsonLd = {
 	"@context": "https://schema.org",
